fix: honor dark mode color scheme

--- a/src/styles/tailwind.css
+++ b/src/styles/tailwind.css
@@ -6,6 +6,7 @@
   color-scheme: light;
 }
 
-.dark {
+.dark :root,
+.dark body {
   color-scheme: dark;
 }
